Fix z-index bug in Firefox that would make navigation buttons appear on top of the metadata panel
Also fixes other issues:
- Some code in mmv.lightboxinterface.js wasn't doing anything
- Canvas buttons were being added to the wrong element
- Several CSS rules were being declared twice, a remnant of the multilightbox days

Mingle: https://wikimedia.mingle.thoughtworks.com/projects/multimedia/cards/409

--- a/resources/mmv/mmv.lightboxinterface.less
+++ b/resources/mmv/mmv.lightboxinterface.less
@@ -1,26 +1,38 @@
+@import "mmv.globals";
 @import "mmv.mixins";
 
+@bottom-height: (@metadatabar-top-content-height + @metadatabar-drag-height);
+@metadata-background: rgb(251, 251, 251);
+
 .mw-mmv-wrapper {
-	position: fixed;
 	top: 0px;
 	left: 0px;
 	right: 0px;
-	bottom: 0px;
 	z-index: 1001;
+	position: absolute;
+	bottom: auto;
 }
 
 .mw-mmv-main {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	position: relative;
+
+	.jq-fullscreened {
+		background-color: black;
+	}
+}
+
+.mw-mmv-image-wrapper,
+.mw-mmv-controls {
+	top: 0px;
+	bottom: @bottom-height;
 }
 
 .mw-mmv-image-wrapper {
-	position: absolute;
-	top: 50px;
+	position: fixed;
 	left: 0px;
 	right: 0px;
-	bottom: 0px;
 }
 
 .mw-mmv-image-inner-wrapper {
@@ -34,21 +46,72 @@
 	top: 0px;
 	height: 32px;
 	width: 100%;
+	z-index: 1;
 }
 
 .mw-mmv-post-image {
 	position: absolute;
-	bottom: 0px;
-	height: 32px;
 	width: 100%;
+	bottom: auto;
+	height: auto;
+	color: #333333;
+	background-color: @metadata-background;
+	min-height: (@bottom-height + 1);
+	opacity: 0;
+	z-index: 2;
 }
 
 .mw-mmv-controls {
-	height: 32px;
 	width: 100%;
-	border-bottom: 1px solid #7d7c81;
+	height: auto;
+	border-bottom: 1px solid #cccccc;
+}
+
+/* Fullscreen styles */
+
+.cursor-hidden {
+	cursor: none;
 }
 
 .mw-mmv-main.jq-fullscreened {
 	background-color: black;
+}
+
+.jq-fullscreened {
+	.mw-mmv-image-wrapper,
+	.mw-mmv-post-image,
+	.mw-mmv-controls {
+		bottom: 0px;
+	}
+
+	.mw-mmv-drag-affordance {
+		display: none;
+	}
+
+	.mw-mmv-post-image,
+	.mw-mmv-controls {
+		@fullscreen-padding: 10px;
+		padding: (@fullscreen-padding / 2) 0;
+		height: (@metadatabar-top-content-height + @fullscreen-padding);
+		background-color: rgba(251, 251, 251, 0);
+		transition: background-color 0.25s;
+		min-height: 0;
+
+		&:hover {
+			background-color: @metadata-background;
+		}
+	}
+
+	.mw-mmv-post-image {
+		position: fixed;
+	}
+
+	.mw-mmv-controls {
+		opacity: 0;
+		transition: opacity 0.25s;
+
+		&:hover {
+			opacity: 1;
+		}
+	}
 }
